--- a/.github/workflows/scrape_configs.yml
+++ b/.github/workflows/scrape_configs.yml
@@ -72,7 +72,7 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add all_live_configs_*.json cache_version.txt clash_subscription.yaml dl-test.bin
+          git add all_live_configs_*.json cache_version.txt clash_subscription.yaml sub_*.txt dl-test.bin
           if git diff --staged --quiet; then
             echo "No new changes to commit."
           else
