--- a/.github/workflows/scrape_configs.yml
+++ b/.github/workflows/scrape_configs.yml
@@ -1,4 +1,4 @@
-name: Scheduled Scrape and Build
+Name: Scheduled Scrape and Build
 
 on:
   schedule:
@@ -72,7 +72,10 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add all_live_configs_*.json cache_version.txt clash_subscription.yaml sub_*.txt dl-test.bin
+          
+          # [CHANGE] Updated to add the entire configs directory plus other root files
+          git add configs/ cache_version.txt dl-test.bin
+          
           if git diff --staged --quiet; then
             echo "No new changes to commit."
           else
