--- a/.github/workflows/scrape_configs.yml
+++ b/.github/workflows/scrape_configs.yml
@@ -1,4 +1,4 @@
-Name: Scheduled Scrape and Build
+name: Scheduled Scrape and Build
 
 on:
   schedule:
@@ -16,7 +16,6 @@ jobs:
       contents: write
     runs-on: ubuntu-latest
     timeout-minutes: 45
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -32,7 +31,6 @@ jobs:
           python-version: "3.11"
 
       - name: Install dependencies
-        # بهینه‌سازی: حذف beautifulsoup4 چون در اسکریپت استفاده نمی‌شود
         run: pip install requests PyYAML PyGithub awscli
 
       - name: Run scraper script
@@ -42,8 +40,8 @@ jobs:
         timeout-minutes: 40
 
       - name: Upload files to ArvanCloud
-        if: success() # فقط در صورت موفقیت اسکریپر اجرا شود
-        continue-on-error: true # اگر آپلود ناموفق بود، ادامه بده
+        if: success()
+        continue-on-error: true
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.ARVAN_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.ARVAN_SECRET_KEY_SECRET }}
@@ -55,12 +53,10 @@ jobs:
           ENDPOINT_URL="https://s3.ir-thr-at1.arvanstorage.com"
           BUCKET_NAME="s3://v2v-data"
           
-          # آپلود محتویات پوشه configs به ریشه bucket
           if [ -d "./configs" ]; then
             aws s3 sync ./configs "$BUCKET_NAME/" --endpoint-url "$ENDPOINT_URL" --acl public-read --cache-control "max-age=300"
           fi
           
-          # آپلود فایل‌های ریشه
           if [ -f "cache_version.txt" ]; then
             aws s3 cp cache_version.txt "$BUCKET_NAME/cache_version.txt" --endpoint-url "$ENDPOINT_URL" --acl public-read --content-type "text/plain" --cache-control "max-age=300"
           fi
@@ -72,8 +68,6 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          
-          # [CHANGE] Updated to add the entire configs directory plus other root files
           git add configs/ cache_version.txt dl-test.bin
           
           if git diff --staged --quiet; then
