--- a/.github/workflows/scrape_configs.yml
+++ b/.github/workflows/scrape_configs.yml
@@ -21,7 +21,6 @@ jobs:
         with:
           token: ${{ secrets.GH_PAT }}
           fetch-depth: 0
-          working-directory: V2V # اضافه کردن این خط
 
       - name: Validate Secrets
         run: |
@@ -57,7 +56,7 @@ jobs:
             echo "::error::GH_PAT not set, skipping scraper."
             exit 1
           fi
-          python main.py
+          python scraper.py # نام فایل به scraper.py تغییر یافت
           echo "::info::Scraper script completed successfully."
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
