--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
+# Dependencies for Scraper
 requests
 PyYAML
 PyGithub
 beautifulsoup4
 awscli
+
+# Dependencies for API (Phase 2)
+Flask
+redis
+python-dotenv
