--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,14 @@
 {
+  "version": 2,
   "builds": [
     {
       "src": "api/index.py",
       "use": "@vercel/python"
+    },
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "." }
     }
   ],
   "routes": [
@@ -11,7 +17,8 @@
       "dest": "api/index.py"
     },
     {
-      "handle": "filesystem"
+      "src": "/(.*\\..*)",
+      "dest": "/$1"
     },
     {
       "src": "/.*",
