--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
-# Dependencies for Scraper
+# Dependencies for Scraper & API
 requests
 PyYAML
 PyGithub>=2.0
 beautifulsoup4
 awscli
-
-# Dependencies for API (Phase 2)
 Flask
 redis
 python-dotenv
