--- a/.github/workflows/scrape_configs.yml
+++ b/.github/workflows/scrape_configs.yml
@@ -82,12 +82,12 @@ jobs:
             aws s3 cp dl-test.bin "$BUCKET_NAME/dl-test.bin" --endpoint-url "$ENDPOINT_URL" --acl public-read --cache-control "max-age=3600"
           fi
 
-          - name: Commit and Push final files to GitHub
+      - name: Commit and Push final files to GitHub
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           
-          # ابتدا چک می‌کنیم که آیا فایلی برای اضافه کردن وجود دارد یا نه
+          # First, check if the main output file exists before proceeding
           if [ ! -f "all_live_configs.json" ]; then
             echo "all_live_configs.json not found, skipping commit."
             exit 0
@@ -98,7 +98,7 @@ jobs:
           if git diff --staged --quiet; then
             echo "No new changes to commit."
           else
-            # قبل از پوش، آخرین تغییرات را با rebase دریافت می‌کنیم
+            # Before pushing, pull the latest changes with rebase
             git pull --rebase
             git commit -m "📊 Update configs [$(date -u '+%Y-%m-%d %H:%M:%S UTC')] [skip ci]"
             git push
