--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,7 +3,7 @@
 name = "rapid-scene-1da6"
 
 # The entrypoint file for your worker's code in your GitHub repository.
-main = "index.js"
+main = "worker.js"
 
 # Specifies the version of the Workers runtime for compatibility.
 compatibility_date = "2025-07-25"
