--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,14 @@
 {
-  "functions": {
-    "api/**/*.py": {
-      "runtime": "python3.9"
+  "builds": [
+    {
+      "src": "api/index.py",
+      "use": "@vercel/python"
     }
-  },
+  ],
   "rewrites": [
     {
       "source": "/api/(.*)",
       "destination": "/api/index.py"
-    },
-    {
-        "source": "/sub/(.*)",
-        "destination": "/api/index.py"
     }
   ]
 }
