--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
   "scripts": {
-    "build": "mkdir public && cp index.html public/ && cp index.js public/ && cp logo.png public/ && cp manifest.json public/ && cp all_live_configs.json public/ && cp cache_version.txt public/"
+    "build": "echo 'Static files are already in /public directory'"
   }
 }
