--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,10 @@
   "version": 2,
   "builds": [
     {
+      "src": "public",
+      "use": "@vercel/static"
+    },
+    {
       "src": "api/index.py",
       "use": "@vercel/python"
     }
@@ -9,11 +13,11 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/api/index"
+      "dest": "/api/index.py"
     },
     {
       "src": "/sub/(.*)",
-      "dest": "/api/index"
+      "dest": "/api/index.py"
     },
     {
       "src": "/(.*)",
