--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -3,7 +3,7 @@ name: Deploy GitHub Pages
 on:
   push:
     branches:
-      - main  # فقط زمانی اجرا شود که به شاخه اصلی پوش شود
+      - main
   workflow_dispatch:
 
 permissions:
@@ -14,6 +14,9 @@ permissions:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -24,7 +27,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './public' # به گیت‌هاب می‌گوید محتوای سایت در این پوشه است
+          path: './public'
 
       - name: Deploy to GitHub Pages
         id: deployment
