--- a/.github/workflows/scrape_configs.yml
+++ b/.github/workflows/scrape_configs.yml
@@ -19,6 +19,9 @@ concurrency:
 
 jobs:
   build-and-deploy:
+    # --- خط کلیدی و اصلاح‌شده در اینجا اضافه شده است ---
+    if: "!contains(github.event.head_commit.message, '📊 DATA:')"
+    
     runs-on: ubuntu-latest
     timeout-minutes: 60
     steps:
@@ -44,7 +47,6 @@ jobs:
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
       
-      # --- بخش کلیدی و اصلاح‌شده ---
       - name: Update public folder with latest data
         run: |
           echo "Copying latest data files into /public directory..."
@@ -59,7 +61,7 @@ jobs:
           if git diff --staged --quiet; then
             echo "No new data changes to commit."
           else
-            git commit -m "📊 DATA: Update configs [$(date -u '+%Y-%m-%d %H:%M:%S UTC')]"
+            git commit -m "📊 DATA: Update configs [$(date -u '+%Y-%-m-%d %H:%M:%S UTC')]"
             git pull --rebase
             git push
           fi
