--- a/.github/workflows/scrape_configs.yml
+++ b/.github/workflows/scrape_configs.yml
@@ -3,9 +3,6 @@ name: Scrape, Build, and Deploy
 on:
   schedule:
     - cron: "0 */8 * * *"
-  push:
-    branches:
-      - main
   workflow_dispatch:
 
 permissions:
@@ -19,9 +16,6 @@ concurrency:
 
 jobs:
   build-and-deploy:
-    # --- خط کلیدی و اصلاح‌شده در اینجا اضافه شده است ---
-    if: "!contains(github.event.head_commit.message, '📊 DATA:')"
-    
     runs-on: ubuntu-latest
     timeout-minutes: 60
     steps:
@@ -61,7 +55,7 @@ jobs:
           if git diff --staged --quiet; then
             echo "No new data changes to commit."
           else
-            git commit -m "📊 DATA: Update configs [$(date -u '+%Y-%-m-%d %H:%M:%S UTC')]"
+            git commit -m "📊 DATA: Update configs [$(date -u '+%Y-%m-%d %H:%M:%S UTC')]"
             git pull --rebase
             git push
           fi
