--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,9 +1,8 @@
-# The name of your worker script in the Cloudflare dashboard.
-# This ensures the automatic deployment updates your existing worker.
 name = "rapid-scene-1da6"
-
-# The entrypoint file for your worker's code in your GitHub repository.
 main = "worker.js"
+compatibility_date = "2024-03-20"
 
-# Specifies the version of the Workers runtime for compatibility.
-compatibility_date = "2025-07-25"
+[[compatibility_flags]]
+# This flag is required for the real TCP ping functionality.
+# It enables the connect() API for creating outbound TCP sockets.
+nodejs_compat = true
